# pytorch-docker-poetry-dvc

./: .gitignore  README.md  model.pth  pyproject.toml  train.py
